Side Task 3 Fix, Swagger Improvements, Bugfixes
